test/kobra-code/syntax-errors/return-does-not-take-block.ks
fn double(n):
  return -> n * 2
end